--- a/HomeWork03.html
+++ b/HomeWork03.html
@@ -7,7 +7,7 @@
     <sсript language="JavaScript">
     <script src ="1.js" defer></script>
     </sсript>
-    <title>Document</title>
+    <title>Решение</title>
     
 </head>
 <body>
